<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryLight"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_thermo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/thermometer"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/temperature_info"
        android:textColor="#060000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:backgroundTint="#ED0A0A"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/chirp_count"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#88585352"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/calculate_temperature"
        android:textColor="#E0E0E0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/textview"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>